[fix] | ui | sizing and alignment

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,18 @@ body {
 .mainHomeScreen {
   @apply w-full;
 }
+
+@layer base {
+  h2 {
+    font-size: 9px;
+  }
+
+  h3 {
+    font-size: 10px;
+    font-weight: bold;
+  }
+
+  p {
+    font-size: 10px;
+  }
+}
